# SOTABand

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run.sh  test.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/middleware/: __init__.py
app/api/routes/: __init__.py  agent_routes.py  api_routes.py  chat_routes.py  data_routes.py  file_routes.py  tool_routes.py
app/api/schemas/: __init__.py  agent_schemas.py  chat_schemas.py  data_schemas.py  tool_schemas.py
app/ui/: __init__.py
app/ui/pages/: __init__.py
app/ui/static/: __init__.py
app/workspace/: __init__.py
config/: __init__.py  logging.yaml  settings.py
core/: __init__.py
core/agent/: __init__.py  base.py  bus.py  entrypoint.py  factory.py  process.py
core/api/: __init__.py  base.py  discoverer.py  registry.json  registry.py
core/engine/: __init__.py
core/llm/: __init__.py  client.py
core/observability/: __init__.py
core/resource/: __init__.py
core/scheduler/: __init__.py
core/security/: __init__.py
docs/: agent-design.md  api-design.md  architecture.md  data-design.md  tool-design.md  ui-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
models/: model.pkl  model_linear_regression.pkl  model_random_forest.pkl  model_ridge.pkl  model_svr.pkl
resources/: __init__.py
resources/agents/: __init__.py  registry.json
resources/base/: __init__.py
resources/data/: __init__.py  registry.json
resources/models/: __init__.py
resources/tasks/: __init__.py
resources/tools/: __init__.py  registry.json
resources/users/: __init__.py
storage/: __init__.py
tests/: __init__.py  conftest.py
(+230 files in other folders)
